k8s/base/web/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: naval-dt-ingress
  namespace: naval-dt
  labels:
    app.kubernetes.io/name: naval-dt-ingress
    app.kubernetes.io/part-of: naval-dt
  annotations:
    nginx.ingress.kubernetes.io/proxy-read-timeout: "300"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "300"
spec:
  ingressClassName: nginx
  rules:
    - host: naval-dt.example.com
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: api
                port:
                  number: 4000
          - path: /
            pathType: Prefix
            backend:
              service:
                name: web
                port:
                  number: 3000
